objects/EUR_CRM_CTM_Contract_forms_setting__mdt.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Activity_Item_form_fields_layout__c</fullName>
        <description>Fields are needed for populating on the Contract Activity Item(EU)</description>
        <label>Activity Item form fields layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Activity_Item_read_only_fields__c</fullName>
        <label>Activity Item read-only fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Activity_Item_required_field__c</fullName>
        <label>Activity Item required field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Available_Payment_Terms_Values__c</fullName>
        <label>Available Payment Terms Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Controlling_field_name__c</fullName>
        <label>Controlling field name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Controlling_field_value__c</fullName>
        <label>Controlling field value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <label>Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Dependent_field_name__c</fullName>
        <label>Dependent field name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Dependent_field_value__c</fullName>
        <label>Dependent field value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Event_Payment_Terms__c</fullName>
        <description>Only if PR Event == true</description>
        <inlineHelpText>Only if PR Event == true</inlineHelpText>
        <label>PR Event Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Type_External_ID__c</fullName>
        <label>Mechanic Type External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Object_Level__c</fullName>
        <description>Object API for Total field</description>
        <inlineHelpText>Object API for Total field</inlineHelpText>
        <label>Object Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Prodict_Item_Control_field_value__c</fullName>
        <label>Prodict Item Control field value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ProductItemDependreadonlyprop__c</fullName>
        <label>Product Item Depend read only property</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ProductItemDependrequiredprop__c</fullName>
        <label>Product Item Depend required property</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_Control_field_name__c</fullName>
        <label>Product Item Control field name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_Depend_field_name__c</fullName>
        <label>Product Item Depend field name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_Subtitle__c</fullName>
        <label>Product Item Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_Text_Area_Fields__c</fullName>
        <label>Product Item Text Area Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_Title__c</fullName>
        <label>Product Item Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_form_fields_layout__c</fullName>
        <description>Fields for filling in on the object Contract Product Item(EU)</description>
        <label>Product Item form fields layout</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_read_only_fields__c</fullName>
        <label>Product Item read-only fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Item_required_field__c</fullName>
        <label>Product Item required field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Required_Product_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required Product Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Field_API_name__c</fullName>
        <description>Filed API name for total</description>
        <inlineHelpText>Filed API name for total</inlineHelpText>
        <label>Total Field API name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CTMContract forms setting</label>
    <pluralLabel>CTM Contract forms settings</pluralLabel>
</CustomObject>